# weather-forecast

./: .env.example  .env.test  Makefile  README.md  pyproject.toml
deploy/: entrypoint.sh
deploy/compose/local/: docker-compose.yml  fastapi.dockerfile  react.dockerfile
docs/readme/: AUTH.md
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/App/: App.js
frontend/src/Auth/: Authentification.js  Authentification.module.css  Rectangle.js  Rectangle.module.css
frontend/src/Menu/: Menu.js  Menu.module.css
frontend/src/Registration/: api.js
frontend/src/Registration/Header/: Header.js  Header.module.css
frontend/src/Registration/RegistrationForm/: RegistrationForm.js  RegistrationForm.module.css
src/: CHANGELOG.md
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 415353c852d6_.py
src/app/: __init__.py  config.py  containers.py
src/app/api/: deps.py  endpoints.py
src/app/domain/common/: models.py
src/app/domain/meteo/: commands.py  queries.py  repositories.py  schemas.py  views.py
src/app/domain/storage/attachments/: commands.py  containers.py  queries.py  repositories.py  views.py
src/app/domain/users/: containers.py
src/app/domain/users/auth/: commands.py  queries.py  repositories.py
src/app/domain/users/core/: commands.py  queries.py  repositories.py  schemas.py
src/app/domain/users/management/: queries.py  views.py
src/app/domain/users/permissions/: services.py
src/app/domain/users/profile/: commands.py  queries.py  views.py
src/app/domain/users/registration/: hi.py
src/tests/: __init__.py  conftest.py  factories.py  utils.py
src/tests/api/: test_auth.py  test_meteo.py  test_profile.py
src/tests/unit/: test_jwt.py  test_transactions.py  test_wait_for_db.py
